Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,4 +17,4 @@ steps:
     npm run build
   displayName: 'build successful'
     npm test
-  displayName: 'build & test successful'
+  displayName: 'Test Pass'
