--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,5 @@ steps:
 - script: 
     npm install
     npm run build
-  displayName: 'build successful'
     npm test
-  displayName: 'Test Pass'
+  displayName: 'Build and Test success'
