Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,4 +16,4 @@ steps:
     npm install
     npm run build
     npm test
-  displayName: 'Build and Test success'
+  displayName: 'Build and Test success Iteration'
